# dynamorio-rs

./: Cargo.toml
.github/workflows/: clippy.yml
drstd/src/: allocator.rs  io.rs
drstd/src/fs/: file.rs  mod.rs
drstd/src/sync/: mutex.rs  rwlock.rs
dynamorio-rs/src/: closure.rs  context.rs  event.rs  extension.rs  instruction.rs  instruction_list.rs  lib.rs  module.rs  operand.rs  symbols.rs
dynamorio-rs/src/arch/: x86_64.rs
dynamorio-rs/src/manager/: basic_block.rs  module.rs  syscall.rs  thread.rs
examples/empty/src/: lib.rs
examples/strace/src/: lib.rs
