[workspace]
resolver = "2"
members = ["drstd", "dynamorio-rs", "examples/empty", "examples/strace"]
default-members = ["drstd", "dynamorio-rs"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.dependencies]
atomic = "0.5"
dynamorio-sys = "11.90.1"

[patch.crates-io]
dynamorio-sys = { git = "https://github.com/yagehu/dynamorio-sys.git" }
